--- a/css/index.css
+++ b/css/index.css
@@ -98,7 +98,7 @@ div#title::before{
   content: "";
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.4);
+  /*! background-color: rgba(0,0,0,0.4); */
   position: absolute;
   left: 0;
   top: 0;
