--- a/css/common.css
+++ b/css/common.css
@@ -1,17 +1,20 @@
-/* 공통스타일 class */
 body{
   font-family: 'Noto Sans KR', sans-serif;
 }
+
 .full{
-  width: auto;
+  width: 0 auto;
 }
+
 .wrap{
   width: 1440px;
   margin: 0 auto;
 }
-.hide{
-  display: none; /* 안보이게 */
+
+.hide{ /* 안보이게 */
+  display: none;
 }
+
 .rbox{
   width: 300px;
   height: 300px;
@@ -19,54 +22,52 @@ body{
   border-radius: 20px;
   text-align: center;
 }
+
 .bgimg{
   background-repeat: no-repeat;
-  background-size: 61%;
-  background-position-x: 86%;
-  background-position-y: 14%;
+  background-size: 65%;
+  background-position-x: 85%;
+  background-position-y: 15%;
 }
+
 .padding50{
   padding-top: 50px;
   padding-bottom: 50px;
 }
+
 .flex{
   display: flex;
   justify-content: center;
 }
+
 .text-center{
   text-align: center;
 }
+
 .h1{
   font-size: 55px;
 }
+
 .h2{
   font-size: 45px;
 }
+
 .h3{
   font-size: 35px;
 }
+
 .h4{
   font-size: 25px;
 }
+
 .h5{
   font-size: 20px;
 }
+
 .p{
   font-size: 14px;
 }
+
 .block{
   display: block;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
