--- a/css/index.css
+++ b/css/index.css
@@ -1,76 +1,87 @@
-header{ 
-  max-width: 1440px; 
-  margin: 0 auto; 
+header{
+  max-width: 1440px;
+  margin: 0 auto;
   /*! display: flex; */
   /*! justify-content: space-between; */
   padding-bottom: 20px;
-} 
-header h1{ 
-  margin-top: 15px; 
-  margin-bottom: 15px; 
-  font-size: 20px; 
-  font-weight: bold; 
-  display: inline-block;
-} 
+}
+
+header h1{
+  margin-top: 15px;
+  margin-bottom: 15px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
 header h1 a{
   
 }
+
 header h1 a::before{
- content: ""; 
- width: 85px;
- height: 30px;
- display: inline-block;
- background-image: url(../img/samsung.png);
- background-size: contain;
- background-repeat: no-repeat;
- vertical-align: -11px;
- margin-right: 15px;
+  content: "";
+  width: 85px;
+  height: 30px;
+  display: inline-block;
+  background-image: url(../img/samsung.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  vertical-align: -10px;
+  margin-right: 15px;
 }
+
 header ul{
   display: flex;
   gap: 30px;
   justify-content: left;
 }
+
 li{
+    
 }
-header div{ /* header안의 모든 div를 의미 : 하위선택자 */
+
+header div{ /* header 안의 div : 하위 선택자 */
   display: flex;
   justify-content: space-between;
   font-size: 12px;
   position: relative;
 }
-header div form{
-  
-  position: absolute;
-  right: 0;
-  top: -41px;
-  background-color: #F5F5F5;
-  padding: 5px 15px;
-  border-radius: 17.5px;
-}
-header div form input{
-  
-  border: none;
-  background-color: transparent;
-}
+
 a.cart{
   background-image: url(../img/cart.svg);
   background-size: contain;
   background-repeat: no-repeat;
   font-size: 0;
+  display: block;
   width: 20px;
   height: 20px;
-  display: block;
 }
+
 a.user{
   background-image: url(../img/user.svg);
-  background-repeat: no-repeat;
   background-size: contain;
+  background-repeat: no-repeat;
   font-size: 0;
+  display: block;
   width: 20px;
   height: 20px;
-  display: block;
 }
+
+header div form{
+  position: absolute;
+  right: 0;
+  top: -40px;
+  padding: 5px 15px;
+  background-color: #eee;
+  border-radius: 17.5px;
+  display: flex;
+}
+
+header div form input{
+  
+  background-color: transparent;
+  border: none;
+}
+
 header button.search{
   background-color: transparent;
   border: none;
@@ -81,28 +92,27 @@ header button.search{
   width: 20px;
   height: 20px;
 }
-/*         타이틀영역              */
+/*     타이틀 영역     */
 div#title{
-  background-color: #EDF1F4;
+  background-color: #4BC4FA;
   height: 41.66666666666667vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   background-image: url(../img/title.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   position: relative;
 }
+
 div#title::before{
   content: "";
   width: 100%;
   height: 100%;
-  /*! background-color: rgba(0,0,0,0.4); */
+  background-color: rgba(0,0,0,0.4);
   position: absolute;
   left: 0;
   top: 0;
 }
+
 div#title div.wrap{
   position: relative;
   height: 100%;
@@ -111,65 +121,75 @@ div#title div.wrap{
   justify-content: center;
   align-items: start;
 }
+
 div#title div.wrap ul.hash{
   display: flex;
   gap: 20px;
   margin-bottom: 24px;
   color: white;
 }
+
 div#title div.wrap h2{
   margin-bottom: 40px;
-  font-size: 117px;
+  font-size: 115px;
   font-family: 'Dongle', sans-serif;
   text-shadow: 2px 2px 5px white;
-  color: #0998F5;
+  color: #4B9DD3;
 }
+
 div#title div.wrap p{
   line-height: 1.4;
   margin-bottom: 20px;
 }
-div#title div.wrap span.control{
-  position: absolute;
-  left: 0px;
-top: calc(50% - 9px);
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  /*! height: 100%; */
-  /*! align-items: center; */
-  /*! z-index: 0; */
-}
-div#title div.wrap span.control button{
-  
-}
-div#title div.wrap span.control .prev{
-  transform: translateX(-200%);
-}
-div#title div.wrap span.control .next{
-  transform: translateX(200%);
-}
+
 div#title div.wrap>a{
-  background-color: #000;
-  color: #fff;
+  background-color: black;
+  color: white;
   padding: 10px;
   border-radius: 10px;
   display: inline-block;
+  transition: all 0.5s;
 }
-div#title div.wrap > a:hover{
+
+div#title div.wrap>a:hover{
+  background-color: white;
+  color: black;
+  transform: scale(2) rotate(1440deg);
+}
+
+#title .wrap .control{
+  position: absolute;
+  left: 0;
+  top: calc(50% - 9px);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+#title .wrap .control button{
   
 }
+
+#title .wrap .control .next{
+  transform: translateX(200%);
+}
+
+#title .wrap .control .prev{
+  transform: translateX(-200%);
+}
+
 div#title div.wrap ul.list{
   display: flex;
   gap: 10px;
-  background-color: blue;
   color: white;
   justify-content: center;
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0, 0, 0, 0.4);
   position: absolute;
   bottom: 25px;
   left: calc(50% - 615px);
   width: 1230px;
 }
+
 div#title div.wrap ul.list a{
   color: white;
   line-height: 3;
@@ -180,54 +200,67 @@ div#title div.wrap ul.list a{
 main {
   
 }
+
 main #product {
   
 }
+
 main #product .wrap {
+  
   display: flex;
   flex-wrap: wrap;
   row-gap: 40px;
   justify-content: center;
   column-gap: 40px;
 }
+
 main #product .wrap ul.list {
   display: flex;
   justify-content: center;
   width: 100%;
 }
+
 main #product .wrap ul.list li {
   
 }
+
 main #product .wrap ul.list li a {
   line-height: 3;
   display: block;
   padding-left: 20px;
   padding-right: 20px;
 }
+
 main #product .wrap ul.list li a:hover{
   background-color: #eee;
+  color: blue;
 }
-/* 제품안내 */
+
+/* 제품 안내 */
+
 main #product .wrap div.jemok {
-background-image: url(../img/je1.png);
+  background-image: url(../img/je1.png);
   background-size: cover;
   background-position: center;
 }
-main #product .wrap div.jemok a{
+
+main #product .wrap div.jemok a { 
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: end;
+  padding: 0 50px 0 50px;
   row-gap: 20px;
-  padding-right: 20px;
-  padding-left: 20px;
-  box-sizing: border-box;
 }
+
 main #product .wrap div.jemok h3 {
-  
+  font-weight: bold;
+  font-size: 20px;
 }
 main #product .wrap div.jemok p {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
+  line-height: 1.5;
+  /*! padding: 0 50px 0 50px; */
 }
 main #product .wrap ul.contents {
   display: flex;
@@ -237,7 +270,6 @@ main #product .wrap ul.contents {
   column-gap: 40px;
 }
 main #product .wrap ul.contents li {
-  
 }
 main #product .wrap ul.contents li:nth-child(1){
   background-image: url(../img/je2.png);
@@ -249,6 +281,7 @@ main #product .wrap ul.contents li:nth-child(3){
   background-image: url(../img/je4.png);
 }
 main #product .wrap ul.contents li:nth-child(4){
+  margin-left: -339px;
   background-image: url(../img/je5.png);
 }
 main #product .wrap ul.contents li:nth-child(5){
@@ -259,20 +292,17 @@ main #product .wrap ul.contents li:nth-child(5){
 main #product .wrap ul.contents li:nth-child(6){
   background-image: url(../img/je7.png);
 }
-main #product .wrap ul.contents li:nth-child(4){
-  margin-left: -339px
-}
 main #product .wrap ul.contents li a{
   display: flex;
   flex-direction: column;
   justify-content: end;
   row-gap: 20px;
-  padding-bottom: 30px;
+  padding-bottom: 20px;
   box-sizing: border-box;
   height: 100%;
 }
 main #product .wrap ul.contents li h4 {
-  
+  line-height: 1.5;
 }
 main #product .wrap ul.contents li h4 span {
   
@@ -280,7 +310,8 @@ main #product .wrap ul.contents li h4 span {
 main #product .wrap ul.contents li p {
   
 }
-main #product .wrap ul.contents::after{
+
+main #product .wrap ul.contents:after{
   content: "";
   width: 300px;
   height: 300px;
@@ -292,46 +323,33 @@ main #product .wrap ul.contents::after{
   background-size: cover;
   background-position: center;
 }
-/* 모바일 & PC and TV & Odio*/
 
-#mobile,#TV{
+/* 모바일 & PC , TV & 오디오 */
+
+#mobile,#tv{
   line-height: 1.6;
 }
-#mobile .wrap,#TV .wrap{
+
+#mobile .wrap,#tv .wrap{
   overflow: hidden;
   background-color: #F9F9F9;
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding: 60px 0;
 }
-#TV .wrap{
-  position: relative;
-  color: white;
-  padding: 0;
-  background-color: transparent;
-}
-#TV .wrap h2{
-  position: absolute;
-  color: white;
-  top: 30px;
-}
+
 #mobile h2{
   
 }
-#mobile ul.list,#TV ul.list{
-  margin: 20px 0;
+
+#mobile ul.list,#tv ul.list{
+  margin: 20px 0 30px 0;
 }
-#TV ul.list{
-  position: absolute;
-}
-#TV ul.list a{
-  color: white;
-}
+
 #mobile div.contents{
-  /*! justify-content: flex-start; */
-  /*! flex-wrap: nowrap; */
+  justify-content: flex-start;
+  flex-wrap: nowrap;
   /*! width: 400%; */
 }
-#mobile .slick-prev{  
+#mobile .slick-prev{
   left: 25px;
   background-color: black;
 }
@@ -339,181 +357,174 @@ main #product .wrap ul.contents::after{
   right: 25px;
   background-color: black;
 }
-#mobile .slick-dots{  
+#mobile .slick-dots{
   bottom: -50px;
 }
-#TV div.contents{
+#tv div.contents{
   justify-content: flex-start;
   flex-wrap: nowrap;
   width: 500%;
-  height: 800px;
+  height: 810px;
 }
-#mobile div.contents article,#TV div.contents article{
+
+#mobile div.contents article,#tv div.contents article{
   width: 100%;
   display: flex;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
 }
+
 #mobile div.contents article figure{
   width: 680px;
   margin: 30px 0;
 }
-#mobile div.contents article figure img{
-  width: 100%;
-  background-color: #EEE;
-  border-radius: 30px;
-}
-#mobile div.contents article figcaption{
-  
-}
-#mobile div.contents article h3{
-  order: 2;
-}
-#mobile div.contents article p{
-  order: 1;
-}
-#mobile div.contents article a{
-  order: 3;
+
+#mobile div.contents article h3{  
+  line-height: 1.5;
 }
 
-/* TV오디오 */
-#TV div.contents article{
+#mobile div.contents article p{
+  
+}
+
+#mobile div.contents article a{
+  
+}
+
+#mobile div.contents article figure img{
+  width: 100%;
+  background-color: #EEEEEE;
+  border-radius: 30px;
+}
+
+#mobile div.contents article figure figcaption{
+  
+}
+
+/* TV & 오디오 */
+
+#tv .wrap{
+  
+  position: relative;
+  color: white;
+  padding: 0;
+}
+
+#tv .h2{
+  position: absolute;
+  width: 100%;
+  top: 30px;
+}
+
+#tv ul.list{
+  position: absolute;
+  width: 100%;
+  top: 70px;
+}
+
+#tv ul.list a{
+  
+  color: white;
+}
+
+#tv div.contents article{
   background-size: cover;
   background-position: center;
   justify-content: end;
   padding-bottom: 50px;
 }
-#TV div.contents article:nth-child(1){
+
+#tv div.contents article:nth-child(1){
   background-image: url(../img/tv1.jpg);
 }
-#TV div.contents article:nth-child(2){
+
+#tv div.contents article:nth-child(2){
   background-image: url(../img/tv2.jpg);
 }
-#TV div.contents article:nth-child(3){
+
+#tv div.contents article:nth-child(3){
   background-image: url(../img/tv3.jpg);
 }
-#TV div.contents article:nth-child(4){
+
+#tv div.contents article:nth-child(4){
   background-image: url(../img/tv4.jpg);
 }
-#TV div.contents article:nth-child(5){
+
+#tv div.contents article:nth-child(5){
   background-image: url(../img/tv5.jpg);
 }
 
-/* 어사이드 */
-aside {
-	position: fixed;
-	right: 20px;
-	bottom: 30px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	gap: 10px;
+#tv div.contents article a{
+  color: white;
 }
 
-aside a {
-	width: 80px;
-	height: 80px;
-	border-radius: 50%;
-	font-size: 0;
-	background-size: 75%;
-	background-repeat: no-repeat;
-	background-position: center;
-}
-
-aside a.more {
-	background-color: aqua;
-	background-image: url(../img/plus.svg);
-}
-
-aside a.top {
-	background-color: gold;
-	background-image: url(../img/top.svg);
-}
-
-/* 하단영역 */
+/* footer */
 
 footer {
   
 }
-footer div.wrap {
-  
+footer div.wrap{
   width: auto;
-  line-height: 2;
 }
-footer div.wrap .full{
-  border-top: 1px solid #666;
-  border-bottom: 1px solid #666;
+footer .wrap .full {
+  border-top: 1px solid #777;
+  border-bottom: 1px solid #777;
   margin-bottom: 50px;
 }
-footer div.wrap ul.fnb {
+footer .wrap .fnb {
   /*! flex-wrap: wrap; */
-  margin-bottom: 48px;
   width: 1440px;
   margin: 0 auto;
   height: 370px;
   position: relative;
 }
-footer div.wrap ul.fnb>li {
-  border-left: 1px solid #666;
+footer .wrap .fnb>li {
+  border-left: 1px solid #777;
   width: calc(100% / 6);
   box-sizing: border-box;
   padding: 30px 0 30px 20px;
 }
-footer div.wrap ul.fnb>li:first-child{
+footer .wrap .fnb>li:first-child{
   width: calc(100% / 6 * 2);
 }
-footer div.wrap ul.fnb>li:last-child{
-/*   border-right: 1px solid #666; */
-  position: absolute;
-  left: calc(100% / 6 * 5);
-  top: 160px;
-}
-footer div.wrap ul.fnb>li:nth-child(6){
-/*   border-right: 1px solid #666; */
+footer .wrap .fnb>li:nth-child(6){
   position: absolute;
   left: calc(100% / 6 * 4);
   top: 160px;
 }
-footer div.wrap ul.fnb li h2 {
-  
+footer .wrap .fnb>li:last-child{
+  position: absolute;
+  left: calc(100% / 6 * 5);
+  top: 160px;
+}
+footer .wrap .fnb li h2 {
   margin-bottom: 20px;
 }
-footer div.wrap ul.fnb li ul.sub {
+footer .wrap .fnb li .sub {
   
 }
-footer div.wrap ul.fnb li ul.sub li {
+footer .wrap .fnb li .sub li {
   
 }
-footer div.wrap ul.fnb li ul.sub li a {
-  line-height: 2;
+footer .wrap .fnb li .sub li a {
+  line-height: 1.8;
   display: block;
 }
-footer div.wrap address {
-  
+footer .wrap address {
   line-height: 2;
+  font-style: normal;
 }
-footer div.wrap address a {
+footer .wrap address a {
   
 }
-footer div.wrap p {
-  
-  line-height: 1.5;
+footer .wrap p {
+  line-height: 1.6;
 }
-footer div.wrap .wCopyright{
+
+footer .wrap .wcopyright{
   margin: 35px 0;
 }
-footer div.wrap .wCopyright p{
+
+footer .wrap .wcopyright p{
   line-height: 5;
 }
-
-
-
-
-
-
-
-
-
-
-
-
