--- a/css/reset.css
+++ b/css/reset.css
@@ -1,16 +1,19 @@
-*{ /* 전체선택자 모든태그 */
+*{ /* 모든 태그 */
   margin: 0;
-  padding:0;
-  /*! line-height:1; */ /* 줄간격,글높이 */
+  padding: 0;
+  line-height: 1; /* 줄간격, 글높이 */
 }
-h1,h2,h3,h4,h5,h6{ /* 그룹선택자 */
+
+h1,h2,h3,h4,h5,h6{
   font-size: 100%; /* 16px */
-  font-weight: normal; /* 폰트두께 */
+  font-weight: normal; /* 폰트 두께 */
 }
-ul{ /* html선택자*/
+
+ul{
   list-style: none; /* 점표시 없앰 */
 }
+
 a{
-  text-decoration: none; 
+  text-decoration: none;
   color: black;
 }
